[project]
name = "api_processor"
version = "0.0.1"
authors = [
  { name="Salil V Nair", email="author@salilvnair.com" },
]
description = "Standardize the way of calling SOAP and Rest API calls in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/salilvnair/api_processor"
Issues = "https://github.com/salilvnair/api_processor/issues"